fix bug that flashcard section doesn't crashes when deleting the last card

--- a/todo.txt
+++ b/todo.txt
@@ -1,13 +1,8 @@
 
-
-fix last item in flashcard that it doesn't crashes
-
 fix chatsection with chatIsLoading
-
 
 fix refresh issue
 
 fix langchain
 
-make a dropdown in the chatfunciton with pre made prompts
-
+make a dropdown in the chatfunciton with pre made prompt
